@@ -1,3 +1,7 @@
+2012-02-21 Ugo Pattacini <ugo.pattacini@iit.it>
+    Added one new functionality to the Gaze Interface:
+    lookAtMonoPixelWithVergence()
+
 2012-02-17 Ugo Pattacini <ugo.pattacini@iit.it>
     Added two new functionalities to the Gaze Interface:
     get3DPointFromAngles() and getAnglesFrom3DPoint().
